--- a/style.css
+++ b/style.css
@@ -1,208 +1,167 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,500&display=swap');
 
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    scroll-behavior: smooth;
-}
-
-/* Progressbar */
-
-#progress-bar {
-    --progress: 0;
-    height: 6px;
-    width: var(--progress);
-    background-color: #1c1c1c;
-    position: fixed;
-    z-index: 99;
 }
 
 
-/* Partikel Hintergrund */
-
-#particles-js canvas {
-    display: block;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease;
-    background-color: #F8F8F5;
-    min-height: 100vh;
+body {
+   background-image: url(BG-Tx-1.svg);
+   background-attachment: fixed;
+   background-position: center center;
+   background-size: 100%;
+   background-repeat: no-repeat;
+   background-color: #1c1c1c;
 }
 
-#particles-js {
-    width: 100%;
-    height: 100%;
-
-    z-index: 10;
-    top: 0;
-    left: 0
-}
-
-/* Navigationsleiste */
-
-header {
-    background-color: #F8F8F5;
-}
-
-li{
-    display: inline-block;
-    padding: 0 25px;
-    margin-top: 15px;
-    margin-right : 15px;
-    transition: 0.4s all ease-in-out;
-    cursor: pointer;
-}
-
-li:hover {
-    text-decoration: underline;
-}
-
-ul{
-    list-style: none;
-    text-align: right;
-}
-
-a {
-    text-decoration: none;
-    color: #1c1c1c;
-}
-
-/* Landingpage Text + Icons */
-
-.landingpage {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.title {
-    font-size: 2rem;
-}
-
-.icons {
-    font-size: 1.5rem;
-}
-
-/* Click To Scroll + Animation */
-
-.scroll {
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    font-size: 25px;
-}
-
-.fa-arrow-down {
-    -webkit-animation: mover 1s infinite  alternate;
-    animation: mover 1s infinite  alternate;
-}
-.fa-arrow-down {
-    -webkit-animation: mover 1s infinite  alternate;
-    animation: mover 1s infinite  alternate;
-}
-@-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-10px); }
-}
-@keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-10px); }
-}
-
-/* 2 Sektion Über Mich */
-
-.sec2 { 
-    min-height: 100vh;
-    background-color: #1c1c1c;
-    width: 100%;
+.navbar {
     display: flex;
-    justify-content: center;
-    align-items: left;
-    height: 100vh;
-    flex-direction: column;
-    padding-left: 50px;
-}
+    justify-content: space-between;
+    padding-left: 75px;
+    padding-right: 75px;
+    padding-top: 50px;
+  }
+  
+  .navbar-left {
+    margin-right: auto;
+  }
 
-.sec2 h1 {
-    font-size: 8.5rem;
-    color: #F8F8F5;
-    text-align: left;
-}
+  .navbar-right a {
+    padding: 0 15px;
+  }
+  
+  .navbar-link {
+    font-weight: 300;
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navbar-link:hover {
+    text-decoration: underline;
+  }
+  
+  .navbar-email {
+    margin-left: 5px;
+  }
 
-.sec2 p {
-    color: #d8d8d8;
-    letter-spacing: 1px;
-    max-width: 70%;
-}
+  .navbar-link:not(:last-child)::after {
+    content: "/";
+    margin-left: 20px;
+    color: #fff;
+  }
 
-.aboutmetext {
-    font-weight: 700;
-    font-size: 5.5vw;
-    color: #F8F8F5;
-}
 
-/* 3 Sektion für die Werke */
+/* Die Erste Section, Skills und den Hi Text */
+
 
 .container {
-    min-height: 100vh;
-    background-color: #F8F8F5;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
-}
-
-.box {
-    width: 400px;
-    height: 250px;
+    height: 40vh;
+    flex-direction: column;
+    margin-top: 100px;
+  }
   
-    transition: 0.5s;
-}
-
-img {
-    width: 50%;
-}
-
-.box img {
-    display: block;
-    width: 100%;
-    
-    
-}
-
-.box p {
+  .circle {
+    width: 200px;
+    height: 200px;
+    border: 2px solid #f1f1f1;
+    background-color: #1c1c1c;
+    border-radius: 50%;
+  }
+  
+  .intro-text {
     text-align: center;
-    font-size: 12pt;
-    margin-top: 20px;
-    letter-spacing: 1px;
-    line-height: 23px;
+    margin-top: 35px;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 300;
+  }
+
+.container2 {
+    margin-top: 225px;
+    min-height: 75vh;
 }
 
-@media screen and (max-width: 860px) {
-    .container {
-        flex-direction: column;
-    }
-
-    .box {
-        scale: 0.8;
-    }
-
-    .werkewrapper h1 {
-        display: none;
-    }
+.experience {
+    margin-top: 100px;
+    padding-left: 75px;
+    color: #fff;
+    font-weight: 500;
+    font-style: italic;
+    font-size: 25px;
 }
-    
-.werkewrapper h1 {
-    position: absolute;
-    margin-left: 70px;
-    margin-top: 70px;
-    font-size: 3.5rem;
-    color: #1c1c1c;
+
+.widebox {
+    margin-top: 35px;
+    min-width: 100%;
+    height: 200px;
+    border: 2px solid rgba(98, 98, 98, .2);
+    border-style: solid none;
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    background-color: #1c1c1c;
+}
+
+h1 {
+    margin-top: 100px;
+    padding-left: 75px;
+    font-size: 25px;
+    font-weight: 500;
+    font-style: italic;
+    color: #fff;
+}
+
+h2 {
+    padding-top: 100px;
+    padding-left: 75px;
+    font-size: 25px;
+    font-weight: 500;
+    font-style: italic;
+    color: #fff;
+}
+
+.aboutme {
+    padding-top: 50px;
+    padding-left: 75px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    width: 950px;
+}
+
+.container3 {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0;
+    min-height: 100vh;
+    line-height: 0px;
+}
+
+.container3 img {
+    width: 100%;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    height: 50px;
+    width: 100%;
+    background-color: #1c1c1c;
+    padding-left: 75px;
+    padding-right: 75px;
+    border: 2px solid rgba(98, 98, 98, .2);
+    border-style: solid none none none;
+}
+
+#copyright {
+    font-weight: 300;
 }
