--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
 
 body {
    background-image: url(BG-Tx-1.svg);
@@ -140,8 +144,14 @@ h2 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0;
-    min-height: 100vh;
-    line-height: 0px;
+
+
+}
+
+.container3 a {
+  display: block;
+  line-height: 0;
+  padding: 0;
 }
 
 .container3 img {
@@ -165,3 +175,62 @@ footer {
 #copyright {
     font-weight: 300;
 }
+
+.mobile-only {
+  display: none;
+}
+
+
+@media (max-width: 970px) {
+  .aboutme {
+    width: 750px;
+  }
+  
+}
+
+@media (max-width: 750px) {
+  .widebox {
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  .aboutme {
+    width: 550px;
+  }
+
+  .desktop-only {
+    display: none;
+  }
+
+  .mobile-only {
+    display: inline-block;
+  }
+
+  .navbar-link span {
+    display: none;
+  }
+
+  #copyright {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .container3 {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 576px) {
+  .widebox img {
+      width: 80px;
+  }
+}
+
+@media (max-width: 550px) {
+  
+  .aboutme {
+    width: 350px;
+  }
+}
+
